Создание секции Watch

--- a/index.html
+++ b/index.html
@@ -50,23 +50,62 @@
             </ul>
         </div>
     </nav>
-<div class="wrap-header">
-    <div class="img-header">
-        <img src="img/manager-top.png" alt="">
-    </div>
-    <div class="main-header-text">
+    <div class="wrap-header">
+        <div class="img-header">
+            <img src="img/manager-top.png" alt="">
+        </div>
+        <div class="main-header-text">
 
-        <h3>We are best and creative agency</h3>
-        <h4>We turn creative ideas into your business.</h4>
-        <p>Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds.</p>
-        <div class="main-header-buttons">
-            <button type="button" class="btn btn-pink rounded-pill">Our Story</button>
-            <button type="button" class="btn btn-violet rounded-pill">Read Me</button>
+            <h3>We are best and creative agency</h3>
+            <h4>We turn creative ideas into your business.</h4>
+            <p>Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese
+                terds.</p>
+            <div class="main-header-buttons">
+                <button type="button" class="btn btn-pink rounded-pill">Our Story</button>
+                <button type="button" class="btn btn-violet rounded-pill">Read Me</button>
+            </div>
+        </div>
+
+    </div>
+</header>
+<!-- /.main-header -->
+<section class="section-watch">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 mb-5">
+                <h3>Dream Big Inspire the World</h3>
+                <h4>We turn creative ideas
+                    into your business.</h4>
+                <nav>
+                    <div class="nav nav-pills" id="nav-tab" role="tablist">
+                        <a class="nav-item nav-link active rounded-pill" id="web-design-tab" data-toggle="tab" href="#web-design"
+                           role="tab" aria-controls="nav-home" aria-selected="true">Web design </a>
+                        <a class="nav-item nav-link rounded-pill" id="nav-profile-tab" data-toggle="tab" href="#mobile-app"
+                           role="tab" aria-controls="nav-profile" aria-selected="false">Mobile App </a>
+                        <a class="nav-item nav-link rounded-pill" id="nav-contact-tab" data-toggle="tab" href="#banding"
+                           role="tab" aria-controls="nav-contact" aria-selected="false"> Branding </a>
+                    </div>
+                </nav>
+                <div class="tab-content" id="nav-tabContent">
+                    <div class="tab-pane fade show active" id="web-design" role="tabpanel" aria-labelledby="nav-home-tab">
+                       <p>Web-design Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds.Lorem ipsum dolor sit am et, consec tetur adipi scing elit.</p>
+                        <p><a href="#" class="btn btn-pink btn-shadow">Read More</a></p>
+                    </div>
+                    <div class="tab-pane fade" id="mobile-app" role="tabpanel" aria-labelledby="nav-profile-tab"><p>Mobile-app Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds.Lorem ipsum dolor sit am et, consec tetur adipi scing elit.</p>
+                    </div>
+                    <div class="tab-pane fade" id="banding" role="tabpanel" aria-labelledby="nav-contact-tab"><p> Contact Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds.Lorem ipsum dolor sit am et, consec tetur adipi scing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- /.col-md-6 -->
+            <div class="col-lg-6 text-center">
+                <img src="img/watch-3.png" alt="">
+            </div>
+            <!-- /.col-md-6 -->
         </div>
     </div>
-
-</div>
-</header>
+</section>
+<!-- /.section-watch -->
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
