--- a/index.html
+++ b/index.html
@@ -78,22 +78,36 @@
                     into your business.</h4>
                 <nav>
                     <div class="nav nav-pills" id="nav-tab" role="tablist">
-                        <a class="nav-item nav-link active rounded-pill" id="web-design-tab" data-toggle="tab" href="#web-design"
+                        <a class="nav-item nav-link active rounded-pill" id="web-design-tab" data-toggle="tab"
+                           href="#web-design"
                            role="tab" aria-controls="nav-home" aria-selected="true">Web design </a>
-                        <a class="nav-item nav-link rounded-pill" id="nav-profile-tab" data-toggle="tab" href="#mobile-app"
+                        <a class="nav-item nav-link rounded-pill" id="nav-profile-tab" data-toggle="tab"
+                           href="#mobile-app"
                            role="tab" aria-controls="nav-profile" aria-selected="false">Mobile App </a>
                         <a class="nav-item nav-link rounded-pill" id="nav-contact-tab" data-toggle="tab" href="#banding"
                            role="tab" aria-controls="nav-contact" aria-selected="false"> Branding </a>
                     </div>
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
-                    <div class="tab-pane fade show active" id="web-design" role="tabpanel" aria-labelledby="nav-home-tab">
-                       <p>Web-design Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds.Lorem ipsum dolor sit am et, consec tetur adipi scing elit.</p>
+                    <div class="tab-pane fade show active" id="web-design" role="tabpanel"
+                         aria-labelledby="nav-home-tab">
+                        <p>Web-design Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut
+                            rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit.
+                            Sed sodales enim ut rhoncus lorem ipsum ese terds.Lorem ipsum dolor sit am et, consec tetur
+                            adipi scing elit.</p>
                         <p><a href="#" class="btn btn-pink btn-shadow">Read More</a></p>
                     </div>
-                    <div class="tab-pane fade" id="mobile-app" role="tabpanel" aria-labelledby="nav-profile-tab"><p>Mobile-app Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds.Lorem ipsum dolor sit am et, consec tetur adipi scing elit.</p>
+                    <div class="tab-pane fade" id="mobile-app" role="tabpanel" aria-labelledby="nav-profile-tab"><p>
+                        Mobile-app Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut
+                        rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed
+                        sodales enim ut rhoncus lorem ipsum ese terds.Lorem ipsum dolor sit am et, consec tetur adipi
+                        scing elit.</p>
                     </div>
-                    <div class="tab-pane fade" id="banding" role="tabpanel" aria-labelledby="nav-contact-tab"><p> Contact Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds.Lorem ipsum dolor sit am et, consec tetur adipi scing elit.</p>
+                    <div class="tab-pane fade" id="banding" role="tabpanel" aria-labelledby="nav-contact-tab"><p>
+                        Contact Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus
+                        lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales
+                        enim ut rhoncus lorem ipsum ese terds.Lorem ipsum dolor sit am et, consec tetur adipi scing
+                        elit.</p>
                     </div>
                 </div>
             </div>
@@ -106,6 +120,44 @@
     </div>
 </section>
 <!-- /.section-watch -->
+<section class="section-progress text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 progress-item">
+                <div>
+                    <i class="fas fa-bullhorn"></i>
+                </div>
+                <div class="num">500+</div>
+                <h4><span>Successfully</span>
+                    completed projects</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet assumenda, at eveniet maxime officia
+                    voluptatem?</p>
+            </div>
+
+            <div class="col-md-4 progress-item">
+                <div>
+                    <i class="fas fa-bullhorn"></i>
+                </div>
+                <div class="num">254+</div>
+                <h4><span>Highly </span>
+                    specialised employees</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet assumenda, at eveniet maxime officia
+                    voluptatem?</p>
+            </div>
+            <div class="col-md-4 progress-item">
+                <div>
+                    <i class="fas fa-bullhorn"></i>
+                </div>
+                <div class="num">45+</div>
+                <h4><span>Awards</span>
+                    around the world</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet assumenda, at eveniet maxime officia
+                    voluptatem?</p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- /.progress -->
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
