--- a/index.html
+++ b/index.html
@@ -157,6 +157,21 @@
         </div>
     </div>
 </section>
+<section class="section-lets text-center">
+    <div class="container">
+        <div class="row">
+            <col-md-12>
+                <h3>Let's Grow Together</h3>
+                <h4>We	turn creative ideas into your business.</h4>
+                <p>Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. </p>
+                <p><a href="#" class="btn btn-pink btn-shadow">Read More</a></p>
+            </col-md-12>
+        </div>
+    </div>
+
+
+</section>
+<!-- /.section-lets text-center -->
 <!-- /.progress -->
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
