Создан секция gesign

--- a/index.html
+++ b/index.html
@@ -157,13 +157,15 @@
         </div>
     </div>
 </section>
+<!-- /.progress -->
 <section class="section-lets text-center">
     <div class="container">
         <div class="row">
             <col-md-12>
                 <h3>Let's Grow Together</h3>
-                <h4>We	turn creative ideas into your business.</h4>
-                <p>Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. </p>
+                <h4>We turn creative ideas into your business.</h4>
+                <p>Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum
+                    ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. </p>
                 <p><a href="#" class="btn btn-pink btn-shadow">Read More</a></p>
             </col-md-12>
         </div>
@@ -172,7 +174,43 @@
 
 </section>
 <!-- /.section-lets text-center -->
-<!-- /.progress -->
+<section class="section-design">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h3>We are best and creative agency</h3>
+                <h4>We turn creative ideas
+                    into your business.</h4>
+                <p>Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum
+                    ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus
+                    lorem ipsum ese terds.</p>
+
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <div><i class="far fa-comments"></i></div>
+                        <h2>Graphic Design</h2>
+                        <p>Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem
+                            ipsum ese terds.</p>
+                        <p><a href="#" class="btn btn-pink btn-shadow">Read More</a></p>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <div><i class="fas fa-bullhorn"></i></div>
+                        <h2>Graphic Design</h2>
+                        <p>Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem
+                            ipsum ese terds.</p>
+                        <p><a href="#" class="btn btn-pink btn-shadow">Read More</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="embed-responsive embed-responsive-16by9 mt-5">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLx0sYbCqOb8TBPRdmBHs5Iftvv9TPboYG" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
