--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/baguetteBox.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Hello, world!</title>
 </head>
@@ -69,7 +70,7 @@
     </div>
 </header>
 <!-- /.main-header -->
-<section class="section-watch">
+<section class="section-watch section-tabs">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 mb-5">
@@ -102,12 +103,14 @@
                         rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed
                         sodales enim ut rhoncus lorem ipsum ese terds.Lorem ipsum dolor sit am et, consec tetur adipi
                         scing elit.</p>
+                        <p><a href="#" class="btn btn-pink btn-shadow">Read More</a></p>
                     </div>
                     <div class="tab-pane fade" id="banding" role="tabpanel" aria-labelledby="nav-contact-tab"><p>
                         Contact Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus
                         lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales
                         enim ut rhoncus lorem ipsum ese terds.Lorem ipsum dolor sit am et, consec tetur adipi scing
                         elit.</p>
+                        <p><a href="#" class="btn btn-pink btn-shadow">Read More</a></p>
                     </div>
                 </div>
             </div>
@@ -204,13 +207,157 @@
             </div>
             <div class="col-md-6">
                 <div class="embed-responsive embed-responsive-16by9 mt-5">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLx0sYbCqOb8TBPRdmBHs5Iftvv9TPboYG" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/videoseries?list=PLx0sYbCqOb8TBPRdmBHs5Iftvv9TPboYG"
+                            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen
+                            crossorigin="anonymous"></iframe>
 
                 </div>
             </div>
         </div>
     </div>
 </section>
+<!-- /.section-design -->
+<section class="section-work section-tabs">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2 text-center">
+                <h4>Our Recent Work</h4>
+                <p>Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum
+                    ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus
+                    lorem ipsum ese terds.Lorem ipsum dolor sit am et, consec tetur adipi scing elit. </p>
+            </div>
+            <!-- /.col-md-8 -->
+
+        </div>
+        <div class="col-md-12 ">
+            <nav>
+                <div class="nav nav-pills justify-content-center mt-5 mb-5" id="nav-tab2" role="tablist">
+                    <a class="nav-item nav-link active rounded-pill" id="web-design-tab2" data-toggle="tab"
+                       href="#web-design2"
+                       role="tab" aria-controls="nav-home2" aria-selected="true">Web design </a>
+                    <a class="nav-item nav-link rounded-pill" id="nav-profile-tab2" data-toggle="tab"
+                       href="#mobile-app2"
+                       role="tab" aria-controls="nav-profile2" aria-selected="false">Mobile App </a>
+                    <a class="nav-item nav-link rounded-pill" id="nav-contact-tab2" data-toggle="tab" href="#branding2"
+                       role="tab" aria-controls="nav-contact2" aria-selected="false"> Branding </a>
+                </div>
+            </nav>
+            <div class="tab-content" id="nav-tabContent2">
+                <div class="tab-pane fade show active" id="web-design2" role="tabpanel"
+                     aria-labelledby="nav-home-tab2">
+                    <div class="gallery text-center row">
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/1.jpg"><img src="img/gallery/1_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/2.jpg"><img src="img/gallery/2_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/3.jpg"><img src="img/gallery/4_s.jpg" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="gallery text-center row">
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/4.jpg"><img src="img/gallery/4_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/5.jpg"><img src="img/gallery/5_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/6.jpg"><img src="img/gallery/6_s.jpg" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="gallery text-center row">
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/7.jpg"><img src="img/gallery/7_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/8.jpg"><img src="img/gallery/8_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/9.jpg"><img src="img/gallery/9_s.jpg" alt=""></a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="tab-pane fade" id="mobile-app2" role="tabpanel" aria-labelledby="nav-profile-tab2">
+                    <div class="gallery text-center row">
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/3.jpg"><img src="img/gallery/3_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/2.jpg"><img src="img/gallery/2_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/1.jpg"><img src="img/gallery/1_s.jpg" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="gallery text-center row">
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/6.jpg"><img src="img/gallery/6_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/5.jpg"><img src="img/gallery/5_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/4.jpg"><img src="img/gallery/4_s.jpg" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="gallery text-center row">
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/9.jpg"><img src="img/gallery/9_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/8.jpg"><img src="img/gallery/8_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/7.jpg"><img src="img/gallery/7_s.jpg" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="branding2" role="tabpanel" aria-labelledby="nav-contact-tab2">
+                    <div class="gallery text-center row">
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/9.jpg"><img src="img/gallery/9_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/8.jpg"><img src="img/gallery/8_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/7.jpg"><img src="img/gallery/7_s.jpg" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="gallery text-center row">
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/6.jpg"><img src="img/gallery/6_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/5.jpg"><img src="img/gallery/5_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/4.jpg"><img src="img/gallery/4_s.jpg" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="gallery text-center row">
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/3.jpg"><img src="img/gallery/3_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/2.jpg"><img src="img/gallery/2_s.jpg" alt=""></a>
+                        </div>
+                        <div class="col-sm-4 gallery-item">
+                            <a href="img/gallery/1.jpg"><img src="img/gallery/1_s.jpg" alt=""></a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!-- /.col-md-12 -->
+    </div>
+</section>
+<!-- /.section-work -->
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -222,6 +369,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+<script src="js/baguetteBox.min.js"></script>
 <script src="js/js.js"></script>
 </body>
 </html>
