--- a/index.html
+++ b/index.html
@@ -358,6 +358,39 @@
     </div>
 </section>
 <!-- /.section-work -->
+<section class="section-client text-center">
+    <div class="container">
+        <div class="row mb-5" >
+            <div class="col-sm-3">
+                <img src="img/client/logo_1.png" alt="">
+            </div>
+            <div class="col-sm-3">
+                <img src="img/client/logo_2.png" alt="">
+            </div>
+            <div class="col-sm-3">
+                <img src="img/client/logo_3.png" alt="">
+            </div>
+            <div class="col-sm-3">
+                <img src="img/client/logo_4.png" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <img src="img/client/logo_5.png" alt="">
+            </div>
+            <div class="col-sm-3">
+                <img src="img/client/logo_6.png" alt="">
+            </div>
+            <div class="col-sm-3">
+                <img src="img/client/logo_7.png" alt="">
+            </div>
+            <div class="col-sm-3">
+                <img src="img/client/logo_8.png" alt="">
+            </div>
+        </div>
+    </div>
+</section>
+<!-- /.section-client text-center -->
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
