--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 <!-- /.section-work -->
 <section class="section-client text-center">
     <div class="container">
-        <div class="row mb-5" >
+        <div class="row mb-5">
             <div class="col-sm-3">
                 <img src="img/client/logo_1.png" alt="">
             </div>
@@ -391,6 +391,84 @@
     </div>
 </section>
 <!-- /.section-client text-center -->
+<section class="section-reviews">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-7">
+                            <div class="carousel-caption">
+                            <h3>Our Happy Client</h3>
+                            <h4>Testimonials</h4>
+                            <blockquote class="blockquote ">
+                                <p class="mb-0">Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit.</p>
+                                <footer class="blockquote-footer"><cite title="Source Title">Mr. John Doe</cite></footer>
+                            </blockquote>
+                            </div>
+                        </div>
+                        <div class="col-sm-5 d-none d-sm-block">
+                            <img src="img/happy-client.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="carousel-item">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-7">
+                            <div class="carousel-caption">
+                                <h3>Our Happy Client</h3>
+                                <h4>Testimonials</h4>
+                                <blockquote class="blockquote ">
+                                <p class="mb-0">Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit.</p>
+                                <footer class="blockquote-footer"><cite title="Source Title">Mr. Bill Doe</cite></footer>
+                            </blockquote>
+                            </div>
+                        </div>
+                        <div class="col-sm-5 d-none d-sm-block">
+                            <img src="img/happy-client.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-7">
+                            <div class="carousel-caption">
+                                <h3>Our Happy Client</h3>
+                                <h4>Testimonials</h4>
+                                <blockquote class="blockquote ">
+                                <p class="mb-0">Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit.</p>
+                                <footer class="blockquote-footer"><cite title="Source Title">Mr. Peter Doe</cite></footer>
+                            </blockquote>
+                            </div>
+                        </div>
+                        <div class="col-sm-5 d-none d-sm-block">
+                            <img src="img/happy-client.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</section>
+<!-- /.section-reviews -->
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
