--- a/index.html
+++ b/index.html
@@ -469,6 +469,31 @@
     </div>
 </section>
 <!-- /.section-reviews -->
+<section class="section-form text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h4>Need Help?</h4>
+                <h5>Don't Forget to Contact With Us</h5>
+                <p>orem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus . </p>
+                <form class="text-left">
+                    <div class="form-row">
+                        <div class="col-md-5">
+                            <input type="text" class="form-control" placeholder="Name">
+                        </div>
+                        <div class="col-md-5">
+                            <input type="email" class="form-control" placeholder="Email">
+                        </div>
+                        <div class="col-md-2">
+                            <button type="submit" class="btn btn-violet btn-shadow">Submit</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- /.section-form -->
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
