--- a/index.html
+++ b/index.html
@@ -404,12 +404,15 @@
                     <div class="row">
                         <div class="col-sm-7">
                             <div class="carousel-caption">
-                            <h3>Our Happy Client</h3>
-                            <h4>Testimonials</h4>
-                            <blockquote class="blockquote ">
-                                <p class="mb-0">Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit.</p>
-                                <footer class="blockquote-footer"><cite title="Source Title">Mr. John Doe</cite></footer>
-                            </blockquote>
+                                <h3>Our Happy Client</h3>
+                                <h4>Testimonials</h4>
+                                <blockquote class="blockquote ">
+                                    <p class="mb-0">Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed
+                                        sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et,
+                                        consec tetur adipi scing elit.</p>
+                                    <footer class="blockquote-footer"><cite title="Source Title">Mr. John Doe</cite>
+                                    </footer>
+                                </blockquote>
                             </div>
                         </div>
                         <div class="col-sm-5 d-none d-sm-block">
@@ -427,9 +430,12 @@
                                 <h3>Our Happy Client</h3>
                                 <h4>Testimonials</h4>
                                 <blockquote class="blockquote ">
-                                <p class="mb-0">Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit.</p>
-                                <footer class="blockquote-footer"><cite title="Source Title">Mr. Bill Doe</cite></footer>
-                            </blockquote>
+                                    <p class="mb-0">Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed
+                                        sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et,
+                                        consec tetur adipi scing elit.</p>
+                                    <footer class="blockquote-footer"><cite title="Source Title">Mr. Bill Doe</cite>
+                                    </footer>
+                                </blockquote>
                             </div>
                         </div>
                         <div class="col-sm-5 d-none d-sm-block">
@@ -446,9 +452,12 @@
                                 <h3>Our Happy Client</h3>
                                 <h4>Testimonials</h4>
                                 <blockquote class="blockquote ">
-                                <p class="mb-0">Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit.</p>
-                                <footer class="blockquote-footer"><cite title="Source Title">Mr. Peter Doe</cite></footer>
-                            </blockquote>
+                                    <p class="mb-0">Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed
+                                        sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et,
+                                        consec tetur adipi scing elit.</p>
+                                    <footer class="blockquote-footer"><cite title="Source Title">Mr. Peter Doe</cite>
+                                    </footer>
+                                </blockquote>
                             </div>
                         </div>
                         <div class="col-sm-5 d-none d-sm-block">
@@ -475,7 +484,9 @@
             <div class="col-md-12">
                 <h4>Need Help?</h4>
                 <h5>Don't Forget to Contact With Us</h5>
-                <p>orem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus . </p>
+                <p>orem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus lorem ipsum
+                    ese terds. Lorem ipsum dolor sit am et, consec tetur adipi scing elit. Sed sodales enim ut rhoncus
+                    . </p>
                 <form class="text-left">
                     <div class="form-row">
                         <div class="col-md-5">
@@ -494,6 +505,27 @@
     </div>
 </section>
 <!-- /.section-form -->
+<section class="section-social">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <ul class="list-group list-group-horizontal-sm justify-content-sm-around">
+                    <li class="list-group-item line"> <h6><a href="#">facebook</a></h6></li>
+                    <li class="list-group-item line">  <h6><a href="#" >twitter</a></h6></li>
+                    <li class="list-group-item line"><h6><a href="#" >linkedin</a></h6></li>
+                    <li class="list-group-item line"> <h6><a href="#" >instagram</a></h6></li>
+                    <li class="list-group-item line"><h6><a href="#" >behance</a></h6></li>
+                </ul>
+
+
+
+
+
+            </div>
+        </div>
+    </div>
+</section>
+<!-- /.section-social -->
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
