--- a/index.html
+++ b/index.html
@@ -510,22 +510,100 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <ul class="list-group list-group-horizontal-sm justify-content-sm-around">
-                    <li class="list-group-item line"> <h6><a href="#">facebook</a></h6></li>
-                    <li class="list-group-item line">  <h6><a href="#" >twitter</a></h6></li>
-                    <li class="list-group-item line"><h6><a href="#" >linkedin</a></h6></li>
-                    <li class="list-group-item line"> <h6><a href="#" >instagram</a></h6></li>
-                    <li class="list-group-item line"><h6><a href="#" >behance</a></h6></li>
+                    <li class="list-group-item line"><h6><a href="#">facebook</a></h6></li>
+                    <li class="list-group-item line"><h6><a href="#">twitter</a></h6></li>
+                    <li class="list-group-item line"><h6><a href="#">linkedin</a></h6></li>
+                    <li class="list-group-item line"><h6><a href="#">instagram</a></h6></li>
+                    <li class="list-group-item line"><h6><a href="#">behance</a></h6></li>
                 </ul>
-
-
-
-
-
             </div>
         </div>
     </div>
 </section>
 <!-- /.section-social -->
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-6">
+                        <h5>Company</h5>
+                        <ul>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#"> Approach</a></li>
+                            <li><a href="#">Sustainability</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li><a href="#"> News</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6">
+                        <h5>Company</h5>
+                        <ul>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#"> Approach</a></li>
+                            <li><a href="#">Sustainability</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li><a href="#"> News</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6">
+                        <h5>Company</h5>
+                        <ul>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#"> Approach</a></li>
+                            <li><a href="#">Sustainability</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li><a href="#"> News</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6">
+                        <h5>Company</h5>
+                        <ul>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#"> Approach</a></li>
+                            <li><a href="#">Sustainability</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li><a href="#"> News</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 footer-images">
+                <div class="row">
+                    <div class="col-6">
+                        <img src="img/footer-img1.png" alt="">
+                    </div>
+                    <div class="col-6">
+                        <img src="img/footer-img2.png" alt="">
+                    </div>
+                    <div class="col-6">
+                        <img src="img/footer-img3.png" alt="">
+                    </div>
+                    <div class="col-6">
+                        <img src="img/footer-img4.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- /.footer -->
+<div class="copyright">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="nav">
+                    <li class="nav-item"><span class="nav-link">&copy;2022 Theme by psdfreebies.com</span></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Privacy</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Terms of Use</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Site Map</a></li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- /.copyright -->
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
