--- a/index.html
+++ b/index.html
@@ -10,11 +10,27 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <style>
+        .preloader{
+position: fixed;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            z-index: 9999;
+            background-color: #fefefe;
+        }
+    </style>
     <link rel="stylesheet" href="css/baguetteBox.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Hello, world!</title>
 </head>
 <body>
+<div class="preloader d-flex justify-content-center align-items-center">
+    <div class="spinner-grow text-info " role="status" style="width: 15rem; height: 15rem;">
+        <span class="sr-only">Loading...</span>
+    </div>
+</div>
 <button class="scrollToTop"><i class="fa fa-angle-up"></i></button>
 <header class="main-header">
     <nav class="navbar navbar-expand-lg">
