--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ position: fixed;
         }
     </style>
     <link rel="stylesheet" href="css/baguetteBox.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Hello, world!</title>
 </head>
@@ -32,7 +33,7 @@ position: fixed;
     </div>
 </div>
 <button class="scrollToTop"><i class="fa fa-angle-up"></i></button>
-<header class="main-header">
+<header class="main-header-all header-index">
     <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="#">
             <img src="img/logo.png" alt="">BlueRex
@@ -45,10 +46,10 @@ position: fixed;
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home </a>
+                    <a class="nav-link" href="index.html">Home </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Features</a>
