вёрстка отдельно статьи single.html

--- a/single.html
+++ b/single.html
@@ -79,84 +79,38 @@
         <div class="row">
             <div class="col-md-8">
                 <article class="article-preview">
-                    <h2><a href="single.html">Lorem ipsum dolor sit.</a></h2>
+                    <h2>Lorem ipsum dolor sit.</h2>
                     <p><span class="article-date"><i class="fa fa-calendar-alt"></i>20.02.2020</span></p>
                     <div class="article-excerpt">
-                        <p><a href="single.html"><img src="https://picsum.photos/id/1/250/100" alt="" class="thumb"></a>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto deserunt ducimus eligendi et ipsum nemo placeat porro praesentium ratione, sunt veritatis. Accusamus eligendi eveniet exercitationem fuga necessitatibus quaerat tempora voluptatibus! Excepturi ratione repellat sed?</p>
-                        <p><a href="single.html" class="more">Read More</a></p>
+                        <p><img src="https://picsum.photos/id/1/700/300" alt="" class="thumb">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto deserunt ducimus eligendi et ipsum nemo placeat porro praesentium ratione, sunt veritatis. Accusamus eligendi eveniet exercitationem fuga necessitatibus quaerat tempora voluptatibus! Excepturi ratione repellat sed?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet facere illo qui quod
+                            ratione? Adipisci alias aliquam aliquid amet aperiam at corporis debitis dolorem dolorum
+                            eaque earum enim eos excepturi facilis harum illo incidunt ipsa itaque labore, laudantium
+                            molestiae molestias necessitatibus nihil nobis non nulla optio placeat, provident quas quasi
+                            quo quod recusandae saepe sint vel veniam voluptates. Accusantium aliquam amet animi beatae
+                            consequuntur corporis deserunt doloribus ea eaque esse et eum eveniet excepturi, expedita
+                            explicabo fuga fugit hic illum inventore ipsa iusto laboriosam magnam maxime nesciunt nobis
+                            officiis possimus provident quia quibusdam quod repellendus saepe similique vel veritatis
+                            voluptatum!</p>
+                        <p><a href="blog.html" class="more">Back</a></p>
                     </div>
                 </article>
                 <!-- /.article-preview -->
-                <article class="article-preview">
-                    <h2><a href="single.html">Accusamus eligendi eveniet exercitationem.</a></h2>
-                    <p><span class="article-date"><i class="fa fa-calendar-alt"></i>22.02.2020</span></p>
-                    <div class="article-excerpt">
-                        <p><a href="single.html"><img src="https://picsum.photos/id/4/250/100" alt="" class="thumb"></a>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto deserunt ducimus eligendi et ipsum nemo placeat porro praesentium ratione, sunt veritatis. Accusamus eligendi eveniet exercitationem fuga necessitatibus quaerat tempora voluptatibus! Excepturi ratione repellat sed?</p>
-                        <p><a href="single.html" class="more">Read More</a></p>
-                    </div>
-                </article>
-                <!-- /.article-preview -->
-                <article class="article-preview">
-                    <h2><a href="single.html">Excepturi ratione repellat sed.</a></h2>
-                    <p><span class="article-date"><i class="fa fa-calendar-alt"></i>27.02.2020</span></p>
-                    <div class="article-excerpt">
-                        <p><a href="single.html"><img src="https://picsum.photos/id/6/250/100" alt="" class="thumb"></a>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto deserunt ducimus eligendi et ipsum nemo placeat porro praesentium ratione, sunt veritatis. Accusamus eligendi eveniet exercitationem fuga necessitatibus quaerat tempora voluptatibus! Excepturi ratione repellat sed?</p>
-                        <p><a href="single.html" class="more">Read More</a></p>
-                    </div>
-                </article>
-                <!-- /.article-preview -->
-                <article class="article-preview">
-                    <h2><a href="single.html">Aliquid architecto deserunt.</a></h2>
-                    <p><span class="article-date"><i class="fa fa-calendar-alt"></i>21.02.2020</span></p>
-                    <div class="article-excerpt">
-                        <p><a href="single.html"><img src="https://picsum.photos/id/3/250/100" alt="" class="thumb"></a>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, illum.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto deserunt ducimus eligendi et ipsum nemo placeat porro praesentium ratione, sunt veritatis. Accusamus eligendi eveniet exercitationem fuga necessitatibus quaerat tempora voluptatibus! Excepturi ratione repellat sed?</p>
-                        <p><a href="single.html" class="more">Read More</a></p>
-                    </div>
-                </article>
-                <!-- /.article-preview -->
-                <article class="article-preview">
-                    <h2><a href="single.html">Lorem ipsum dolor sit amet.</a></h2>
-                    <p><span class="article-date"><i class="fa fa-calendar-alt"></i>25.02.2020</span></p>
-                    <div class="article-excerpt">
-                        <p><a href="single.html"><img src="https://picsum.photos/id/2/250/100" alt="" class="thumb"></a>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto deserunt ducimus eligendi et ipsum nemo placeat porro praesentium ratione, sunt veritatis. Accusamus eligendi eveniet exercitationem fuga necessitatibus quaerat tempora voluptatibus! Excepturi ratione repellat sed?</p>
-                        <p><a href="single.html" class="more">Read More</a></p>
-                    </div>
-                </article>
-                <!-- /.article-preview -->
-                <div class=" d-flex justify-content-center">
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination">
-                            <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Previous">
-                                    <span aria-hidden="true">&laquo;</span>
-                                </a>
-                            </li>
-                            <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Next">
-                                    <span aria-hidden="true">&raquo;</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-                <!-- /.pagination -->
+
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-4">
-               <div class="sidebar-widget widget-categories">
-                   <h5 class="widget-title">Categories</h5>
-                   <ul>
-                       <li><a href="#">Category 1</a></li>
-                       <li><a href="#">Category 2</a></li>
-                       <li><a href="#">Category 3</a></li>
-                       <li><a href="#">Category 4</a></li>
-                       <li><a href="#">Category 5</a></li>
-                   </ul>
-               </div>
-               <!-- /.sidebar-widget widget-categories -->
+                <div class="sidebar-widget widget-categories">
+                    <h5 class="widget-title">Categories</h5>
+                    <ul>
+                        <li><a href="#">Category 1</a></li>
+                        <li><a href="#">Category 2</a></li>
+                        <li><a href="#">Category 3</a></li>
+                        <li><a href="#">Category 4</a></li>
+                        <li><a href="#">Category 5</a></li>
+                    </ul>
+                </div>
+                <!-- /.sidebar-widget widget-categories -->
             </div>
             <!-- /.col-md-4 -->
         </div>
